--- a/web/src/search/input/QueryBuilder.scss
+++ b/web/src/search/input/QueryBuilder.scss
@@ -92,6 +92,11 @@
     &__docs-link {
         padding-top: 1.5rem;
     }
+
+    &__rule {
+        background-color: $input-border-color;
+        color: $input-border-color;
+    }
 }
 
 .theme-light {
