--- a/web/src/search/input/QueryBuilderInputRow.scss
+++ b/web/src/search/input/QueryBuilderInputRow.scss
@@ -15,7 +15,7 @@
 
     &__input {
         flex: 1 1 auto;
-        padding-right: 1rem;
+        // padding-right: 1rem;
     }
 
     &__description {
