--- a/web/src/site-admin/SiteAdminActivation.scss
+++ b/web/src/site-admin/SiteAdminActivation.scss
@@ -22,6 +22,9 @@
             }
         }
     }
+    .progress-bar-container.hidden {
+        visibility: hidden;
+    }
 }
 
 .onboarding-container {
